Fri Jul 30 16:28:24 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/odbc/odbc.c:
	- support for binding offset retrieving data

Thu Jul 29 12:21:24 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/blk.c src/ctlib/cs.c:
	* src/ctlib/ct.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/dblib/rpc.c src/dblib/xact.c src/pool/config.c:
	* src/tds/config.c src/tds/convert.c src/tds/iconv.c:
	* src/tds/locale.c src/tds/login.c src/tds/mem.c:
	* src/tds/query.c src/tds/read.c src/tds/token.c:
	* src/tds/util.c src/tds/write.c src/odbc/odbc.c:
	- changed log system to vfprintf
	- update ODBC for PARAMSET_SIZE

Wed Jul 28 15:43:24 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/blk.c: fix possible buffer overflow
	* src/dblib/bcp.c: fix memory leak, use strdup

Tue Jul 27 10:28:50 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/blk.c: fix bulk for numeric types
	* src/tds/write.c: do not log false errors

Mon Jul 26 16:38:30 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c src/tds/write.c:
	- cleanup unused bcp code
	- small optimization (calloc set memory to zero itself)

Thu Jul 22 15:37:47 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/blk_in.c src/ctlib/unittests/cancel.c:
	* src/dblib/unittests/bcp.c src/dblib/unittests/common.c:
	* src/dblib/unittests/common.h src/dblib/unittests/t0013.c:
	* src/dblib/unittests/t0014.c:
	- remove warning compiling

Thu Jul 22 15:08:05 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: small test fix

Wed Jul 21 21:26:41 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h src/ctlib/ct.c:
	- fix free invalid pointer
	* src/ctlib/unittests/common.c src/ctlib/unittests/common.h:
	* src/ctlib/unittests/cs_diag.c src/ctlib/unittests/ct_diagall.c:
	* src/ctlib/unittests/ct_diagclient.c:
	* src/ctlib/unittests/ct_diagserver.c: